# elf-ai

./: .bandit.yml  .dockerignore  .env.base  .env.example  .env.test  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  create_test_user.sh  cronjobs  crontab  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  logging.ini  mypy.ini  package-lock.json  package.json  requirements.txt  tsconfig.json  turbo.json
.cursor/rules/: django.mdc  docker-development.mdc  elfai-context.mdc  imports.mdc  makefile.mdc  react.mdc  testing.mdc
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  db-check.yml
apps/: __init__.py
apps/api/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  pytest.ini
apps/api/apps/agent/: README.md  __init__.py  apps.py  llm_parser.py  service.py  urls.py  views.py
apps/api/apps/agent/tools/: __init__.py  base.py  registry.py  utils.py
apps/api/apps/agent/utils/: __init__.py  formatter.py
apps/api/apps/chat/: __init__.py  admin.py  apps.py  models.py  serializers.py  views.py
apps/api/apps/chat/migrations/: 0001_initial.py
apps/api/apps/core/: __init__.py  apps.py  config.py  constants.py  exceptions.py  health_checks.py  logging.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
apps/api/apps/core/management/commands/: create_test_user.py
apps/api/apps/dashboard/: __init__.py  apps.py  views.py
apps/api/apps/shows/: __init__.py  admin.py  apps.py  config.py  enums.py  logging.py  model_types.py  models.py  schemas.py  serializers.py  types.py  typing.py  views.py
apps/api/apps/shows/api/: serializers.py  urls.py  views.py
apps/api/apps/shows/management/commands/: add_new_epguides_shows.py  build_media_file_tree.py  clean_downloaded_filenames.py  delete_unwanted_files.py  fetch_tv_shows.py  manage_tx_queue.py
apps/api/apps/shows/migrations/: 0001_initial.py  0002_tvshow_last_release_date_tvshow_last_release_episode_and_more.py  0003_alter_tvshow_current_episode_and_more.py  0004_mediafile.py  0005_alter_mediafile_last_read_from_disk.py  0006_alter_mediafile_last_read_from_disk_and_more.py  0007_mediafile_keep.py  0008_mediafile_is_movie.py  0009_mediafile_renamed_from.py  0010_alter_mediafile_renamed_from.py  0011_alter_tvshow_options_mediafile_created_at_and_more.py
apps/api/apps/shows/services/: media_file_service.py  tv_show_service.py
apps/api/apps/shows/tests/: test_add_new_epguides_shows.py  test_clean_files.py  test_epguides_utils.py  test_media_file.py  test_tv_show.py  test_tx_wrapper.py
apps/api/apps/shows/utils/: ai.py  epguides.py  epguides_utils.py  fetcher.py  files.py  torrent.py  transmission.py  tx.py
apps/api/apps/templates/admin/chat/: dashboard.html
apps/api/apps/templates/admin/chat/conversation/: change_list.html
apps/api/config/: __init__.py  asgi.py  urls.py  wsgi.py
apps/api/config/middleware/: __init__.py  cache.py  errors.py  logging.py  metrics.py  performance.py  rate_limit.py  security.py  versioning.py
apps/api/config/settings/: __init__.py  base.py  development.py  production.py  staging.py  test.py
apps/api/tests/: conftest.py
apps/chat/: urls.py  views.py
apps/client/web/: .dockerignore  Dockerfile  Makefile  README.md  cypress.config.ts  docker-compose.yml  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/dashboard/: urls.py  views.py
apps/media/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/media/migrations/: 0001_initial.py  0002_tvshow_last_release_date_tvshow_last_release_episode_and_more.py  0003_alter_tvshow_current_episode_and_more.py  0004_mediafile.py  0005_alter_mediafile_last_read_from_disk.py  0006_alter_mediafile_last_read_from_disk_and_more.py  0007_mediafile_keep.py  0008_mediafile_is_movie.py  0009_mediafile_renamed_from.py  0010_alter_mediafile_renamed_from.py
apps/media/tests/: test_add_new_epguides_shows.py  test_epguides_utils.py
apps/media/utils/: ai.py  epguides_utils.py  exceptions.py  fetcher.py  files.py  tx.py
apps/plex/: tests.py
backend/: .bandit.yaml  .flake8  Dockerfile  celery_run.py  debug.py  docker-entrypoint.sh  flower  manage.py  mypy.ini  pyproject.toml  pytest.ini
backend/apps/agent/: __init__.py  (+3 more)
backend/config/: __init__.py  asgi.py  celery.py  urls.py
backend/tests/: test_basic.py
config/env/: .env.example
config/eslint/: .eslintrc.js
config/git/: .pre-commit-config.yaml
config/typescript/: tsconfig.base.json
core/: asgi.py  settings.py  settings_prod.py  urls.py  utils.py  wsgi.py
frontend/: .dockerignore  .eslintrc.js  Dockerfile  Makefile  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.jest.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.test.tsx  index.tsx  main.tsx  setupTests.ts  theme.ts  types.d.ts  vite-env.d.ts
scripts/: dev_replace_local_data.sh  smoke_test.sh
(+268 files in other folders)
